# Graph-based-Congestion-Game-Engine

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  packages.txt  pyproject.toml  requirements.txt
scripts/: build_graph.py  download_data.py  run_city_scenario.py  run_demand_sweep.py  run_tax_sweep.py  run_toy_example.py  verify_setup.py
src/: config.py
src/app/: components.py  streamlit_app.py
src/app/pages/: 01_overview.py  02_equilibrium_vs_optimum.py  03_tax_experiments.py  04_dynamic_scenarios.py  05_city_comparison.py  06_demand_gating.py
src/graph_ingest/: loaders.py  osm_loader.py  schema.py  snap_loader.py  validators.py
src/graph_model/: network_builder.py  od_pairs.py
src/routing_game/: costs.py  link_loads.py  optimum.py  paths.py  poa.py  taxes.py  wardrop.py
src/simulation/: dynamic_updates.py  scenarios.py  sweeps.py
src/storage/: graphml_io.py  neo4j_io.py
src/viz/: network_viz.py  plots.py
tests/: test_network_builder.py  test_schema.py  test_wardrop.py
